--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
         <div class="h"> <b>Блог: техническое</b> </div>
         <div class="tegi1">
             <div>
-                <div><img src="./3.png" width="30" height="30"/>Опубликовано: <b> 22/12/2011 </b></div>
-                <div><img src="./2.png" width="30" height="30"/> Категория: <b> Блог </b></div>
+                <div><img src="./images/3.png" width="30" height="30"/>Опубликовано: <b> 22/12/2011 </b></div>
+                <div><img src="./images/2.png" width="30" height="30"/> Категория: <b> Блог </b></div>
             </div>
             <div>
-                <div><img src="./4.png" width="30" height="30" />Оставить комментарий</div>
+                <div><img src="./images/4.png" width="30" height="30" />Оставить комментарий</div>
             </div>
         </div>
         <div class="tegi2">
@@ -21,7 +21,7 @@
             <div> thoughts </div>
         </div>
         <div class="imgnt">
-            <img src="./1.png"/>
+            <img src="./images/1.png"/>
             <p> Друзья, нужна помощь! </p>
             <p></p>
             <p>Бес попутал и я пару месяцев назад решил "оптимизировать" файл robot.txt на сайте. Дооптимизировался!</p>
